--- a/index.html
+++ b/index.html
@@ -142,14 +142,16 @@
             s.parentNode.insertBefore(g,s)}(document,'script'));
         </script>
 
+        
         <!-- build:js js/main.js -->
         <script src="components/jquery/jquery.min.js"></script>
-        <script src="components/jquery.easing/js/jquery.easing.js"></script>
         <script src="js/jpreloader.js"></script>
         <script src="js/jquery.fullPage.js"></script>
         <script src="js/jquery.validate.pack.js"></script>
         <script src="js/contact.js"></script>
         <script src="js/script.js"></script>
         <!-- endbuild -->
+        
+        <script src="js/jquery.easing.js"></script>
 </body>
 </html>
